Fix issue with ruler not showing when using element toolbar navigation

--- a/src/css/content.less
+++ b/src/css/content.less
@@ -477,6 +477,7 @@ input {
 	position: absolute !important;
 	top: 0px !important;
 	left: 0px !important;
+	cursor: url('images/crosshair.png') 12 12, crosshair !important;
 
 	.page-ruler-guide {
 		position: absolute !important;
